--- a/templates/pace-theme-center-radar.tmpl.css
+++ b/templates/pace-theme-center-radar.tmpl.css
@@ -32,6 +32,10 @@
   border-color: `args.color || "#29d"` transparent transparent;
   border-radius: 50%;
 
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+
   -webkit-animation: spin 1s linear infinite;
      -moz-animation: spin 1s linear infinite;
        -o-animation: spin 1s linear infinite;
